argocd-repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-lovely-plugin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    spec:
      containers:
      - name: cmp
        command: [/var/run/argocd/argocd-cmp-server] # Entrypoint should be Argo CD lightweight CMP server i.e. argocd-cmp-server
        image: busybox # This can be off-the-shelf or custom-built image
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
        volumeMounts:
          - name: var-files
            mountPath: /var/run/argocd
          - name: plugins
            mountPath: /home/argocd/cmp-server/plugins
          - name: tmp
            mountPath: /tmp
          # Remove this volumeMount if you've chosen to bake the config file into the sidecar image.
          - name: cmp-plugin-volume
            mountPath: /home/argocd/cmp-server/config/plugin.yaml
            subPath: plugin.yaml
          - name: custom-tools
            mountPath: /usr/local/bin/argocd-lovely-plugin
            subPath: argocd-lovely-plugin

      volumes:
        - configMap:
            name: cmp-plugin
          name: cmp-plugin-volume
        - name: custom-tools
          emptyDir: {}
